[gd_scene load_steps=7 format=3 uid="uid://cw5clvgs6ppgo"]

[ext_resource type="PackedScene" uid="uid://dl77eoc1wt8bg" path="res://Scenes/transition.tscn" id="1_cmhrf"]
[ext_resource type="Script" uid="uid://bdq3ol3bjunru" path="res://Scripts/mainmenu.gd" id="1_d2nv2"]
[ext_resource type="PackedScene" uid="uid://cgfr5s84eowjd" path="res://Scenes/text_sticky.tscn" id="3_lah54"]
[ext_resource type="Texture2D" uid="uid://xgef78td2eie" path="res://Assets/paperbg.jpg" id="3_wgsso"]
[ext_resource type="LabelSettings" uid="uid://yur1kbpcwdss" path="res://Resources/shop_ui.tres" id="4_v4pkt"]
[ext_resource type="PackedScene" uid="uid://mmp6un3attx8" path="res://Scenes/sticky_note_text_button.tscn" id="5_5326e"]

[node name="Mainmenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d2nv2")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = 742.0
offset_right = -356.0
offset_bottom = 1309.0
grow_horizontal = 2
grow_vertical = 2
rotation = -1.57129
texture = ExtResource("3_wgsso")

[node name="TextSticky" parent="." instance=ExtResource("3_lah54")]
visible = false
layout_mode = 1

[node name="Transition" parent="." instance=ExtResource("1_cmhrf")]
visible = false
layout_mode = 1

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -166.0
offset_top = -100.0
offset_right = 172.0
offset_bottom = 91.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 36
text = "Play"

[node name="StickyNoteTextButton" parent="." instance=ExtResource("5_5326e")]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -225.0
offset_top = -268.0
offset_right = 45.0
offset_bottom = 2.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.6, 0.6)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -305.0
offset_top = 57.0
offset_right = 134.0
offset_bottom = 121.0
grow_horizontal = 2
scale = Vector2(1.34636, 1.57127)
text = "Doodle Of Duty"
label_settings = ExtResource("4_v4pkt")

[node name="Highscore" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -321.0
offset_top = -190.0
offset_right = 322.0
offset_bottom = -126.0
grow_horizontal = 2
grow_vertical = 0
text = "Most Waves Survived: 0"
label_settings = ExtResource("4_v4pkt")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
